objects/BMCServiceDesk__Incident__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Priority_ID__c</fullName>
        <formula>BMCServiceDesk__FKPriority__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The priority is calculated depending on the urgency and impact values that you have selected. If required, you can use this field to select a different priority value from the calculated value.</inlineHelpText>
        <label>Priority~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Queue__c</fullName>
        <description>Queue to which the record is assigned.</description>
        <formula>IF(UPPER(LEFT(OwnerId , 3)) =&quot;00G&quot;,BMCServiceDesk__queueName__c ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Reassigned_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Displays the number of times a record is reassigned to a user.</inlineHelpText>
        <label>Reassigned Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Recurrence__c</fullName>
        <label>Recurrence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecurringParentRecordId__c</fullName>
        <label>Recurring Parent Record ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RequestDetailCloneId__c</fullName>
        <description>Original service request detail ID that is used to clone the service request</description>
        <inlineHelpText>Original service request detail ID that is used to clone the service request</inlineHelpText>
        <label>Request Detail Clone ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ServiceRequest__c</fullName>
        <formula>If((AND(!ISNULL( BMCServiceDesk__FKRequestDefinition__c ), !ISBLANK( BMCServiceDesk__FKRequestDefinition__c ))), $Label.BMCServiceDesk__ExtjsMessageYes , $Label.BMCServiceDesk__ExtjsMessageNo )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_Request_Title__c</fullName>
        <label>Service Request Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ShowDueDateDialog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field decides the opening of pop up window for recalculation of due date in case of Standard Forms.</description>
        <label>Show DueDate Dialog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__StatusChangeDate__c</fullName>
        <inlineHelpText>Stores the date/time on which the status of an incident is changed.</inlineHelpText>
        <label>Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status_ID__c</fullName>
        <formula>BMCServiceDesk__FKStatus__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the appropriate status for the incident. Status is used to display the progress of an incident through its stages of opening to closure.</inlineHelpText>
        <label>Status~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Task_Closed_Controller__c</fullName>
        <description>This field is used to activate the workflow for sending email to Incident owner after closing each linked task. The value is set with the linked task name to activate field update.</description>
        <label>Task Closed Controller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TemplateAlreadyApplied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Template Already Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TemplateName__c</fullName>
        <label>Template Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TimeSpentInCurrentStatus__c</fullName>
        <formula>IF( BMCServiceDesk__Clock_Status__c !=$Label.BMCServiceDesk__ClockStatusStopped,IF(FLOOR((NOW() -BMCServiceDesk__StatusChangeDate__c)* 1440) &gt;=100000,100000, FLOOR((NOW() -BMCServiceDesk__StatusChangeDate__c)* 1440)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the total time for which an incident is assigned to the current status. This field does not consider the business hours configured for an organization.</inlineHelpText>
        <label>Time Spent In Current Status (minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Time_Remaining_Percentage__c</fullName>
        <description>Time remaining (in percentage) to resolve an incident. This value is based on the opened and due date of an incident.If the due date of an incident has passed, this field returns 0.If an incident is closed or the Due Date field is blank, this field returns 100.</description>
        <formula>IF(OR( ISBLANK(BMCServiceDesk__dueDateTime__c), !BMCServiceDesk__state__c ),100,
IF( ((BMCServiceDesk__dueDateTime__c- NOW())/(BMCServiceDesk__dueDateTime__c- BMCServiceDesk__openDateTime__c ))*100&gt;0, ((BMCServiceDesk__dueDateTime__c- NOW())/(BMCServiceDesk__dueDateTime__c- BMCServiceDesk__openDateTime__c ))*100,0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Remaining Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TotalWorkTime__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Displays the total time for which a staff has worked on an incident during the business hours. This field calculates only the time spent on an incident when the work clock is running.</inlineHelpText>
        <label>Total Work Time (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Total_Duration__c</fullName>
        <label>Total Duration (minutes)</label>
        <summarizedField>BMCServiceDesk__IncidentHistory__c.BMCServiceDesk__Action_Duration__c</summarizedField>
        <summaryForeignKey>BMCServiceDesk__IncidentHistory__c.BMCServiceDesk__FKIncident__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Type__c</fullName>
        <formula>If(( AND(!ISNULL( BMCServiceDesk__FKRequestDefinition__c ), !ISBLANK( BMCServiceDesk__FKRequestDefinition__c )) ) , $Label.BMCServiceDesk__ServiceRequestLabel , $Label.BMCServiceDesk__Incident)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UpdateCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field can be used in workflows to increment the count when a new record is added to the Incident History.</description>
        <label>Record Update Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Urgency_ID__c</fullName>
        <formula>BMCServiceDesk__FKUrgency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select how quickly the incident needs to be resolved. The urgency and the level of impact are used to calculate the priority of the incident.</inlineHelpText>
        <label>Urgency~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__VIP_Client__c</fullName>
        <formula>IF(BMCServiceDesk__FKClient__r.BMCServiceDesk__VIP__c, IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/profile16.png&quot;, &quot;VIP Client&quot;), &apos;-&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if the client is VIP.</inlineHelpText>
        <label>VIP Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__WorkflowController__c</fullName>
        <description>This field will be used to initiate and control work-flows and triggers on this object.</description>
        <label>WorkflowController</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__actualDuration__c</fullName>
        <label>Actual Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__actualOutageDuration__c</fullName>
        <label>Actual Outage Time (Min)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__call__c</fullName>
        <inlineHelpText>This field is automatically incremented by 1 when you choose the Increment Call Counter command of the Actions menu. This field allows you to track the number of times an incident&apos;s client has called the service desk.</inlineHelpText>
        <label>Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__clientEmail__c</fullName>
        <formula>BMCServiceDesk__FKClient__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__clientFirstName__c</fullName>
        <formula>BMCServiceDesk__FKClient__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the first name of the client who submitted the incident.</inlineHelpText>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__clientId__c</fullName>
        <formula>BMCServiceDesk__FKClient__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the Client ID of the client who submitted the incident.</inlineHelpText>
        <label>Client ID~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__clientLastName__c</fullName>
        <formula>BMCServiceDesk__FKClient__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the last name of the client who is submitting the incident.</inlineHelpText>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__closeDateTime__c</fullName>
        <inlineHelpText>This field is automatically set to the date and time at which the incident is closed.</inlineHelpText>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__closeTasks__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if you want to close all tasks linked to this incident. When you have resolved the incident, you might want to close all linked tasks because these tasks are no longer required.</inlineHelpText>
        <label>Close Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__completedDate__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__contactType__c</fullName>
        <label>Incident Source</label>
        <picklist>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax, Letter, Paper form, or Memo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Listen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Own observation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walkup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web request form</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__dueDateTime__c</fullName>
        <inlineHelpText>This field is automatically set to the date and time at which the incident should be completed based on the priority&apos;s duration. If required, you can use this field to select a different due date from the calculated due date.</inlineHelpText>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__firstCallResolution__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if this incident is resolved in the first telephone call made to the staff.</inlineHelpText>
        <label>First Call Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__followUpDateTime__c</fullName>
        <inlineHelpText>Use this field to set the date and time at which the follow up action must be initiated. This field is enabled when you select the Follow Up field.</inlineHelpText>
        <label>Follow Up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__followUp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if a follow up is required for this incident after you have closed the incident.</inlineHelpText>
        <label>Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if the incident record is no longer valid, but the record has to be retained for compliance with the records retention policy. For example, if a client has left the account, all the client&apos;s incident records would be invalid.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inc_console_detail_link__c</fullName>
        <description>To be used in Service Cloud Console</description>
        <formula>HYPERLINK(&quot;javascript:var loc = window.parent.location.href; var splittext=loc.split(&apos;/&apos;); var match = /console/.test(splittext[3]); if(match){srcUp(&apos;/apex/BMCServiceDesk__IncidentConsole?record_name=&quot;&amp; Name &amp;&quot;&amp;record_id=&quot; &amp; Id &amp; &quot;&amp;isdtp=vw&amp;isServiceCloudConsole=true&apos;)}else if(loc.indexOf(&apos;/apex/RemedyforceConsole&apos;) &gt; 0){window.parent.addTab(&apos;&quot;&amp;Id&amp;&quot;&apos;,&apos;&quot;&amp;Name&amp;&quot;&apos;,&apos;Incident__c&apos;,false,&apos;&apos;,&apos;&apos;,&apos;Incident&apos;);}else{ var baseUrl = loc.substring(0,loc.lastIndexOf(&apos;/&apos;)+1);window.parent.location.href = baseUrl + &apos;&quot; &amp; Id &amp;&quot;&apos;}&quot;, Name,&quot;_self&quot;)</formula>
        <label>Incident #+</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__incidentDescription__c</fullName>
        <inlineHelpText>Use this field to enter a description of the issue the client is reporting.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__incidentResolution__c</fullName>
        <inlineHelpText>Use this field to specify what has been done to resolve the incident. Provide detailed solution instructions or describe why the incident cannot be resolved if it is not possible to provide a solution or workaround.</inlineHelpText>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__isServiceRequest__c</fullName>
        <formula>IF(( AND(!ISNULL( BMCServiceDesk__FKRequestDefinition__c ), !ISBLANK( BMCServiceDesk__FKRequestDefinition__c )) ) , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Service Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__maximumDuration__c</fullName>
        <label>Maximum Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__note__c</fullName>
        <label>Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__openDateTime__c</fullName>
        <inlineHelpText>This field is automatically set to the date and time at which the incident was created.</inlineHelpText>
        <label>Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__outageFrom__c</fullName>
        <inlineHelpText>Use this field to select the date when the service outage begins.</inlineHelpText>
        <label>Outage Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__outageTo__c</fullName>
        <inlineHelpText>Use this field to select the date when the service outage ends.</inlineHelpText>
        <label>Outage End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__queueName__c</fullName>
        <inlineHelpText>Displays the name of the queue to which the incident was last assigned.</inlineHelpText>
        <label>Last Queue</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__recommendedFixDateTime__c</fullName>
        <label>Recommended Fix Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__respondedDateTime__c</fullName>
        <inlineHelpText>This field is automatically set to the date and time at which the &quot;Actions &gt; Responded&quot; command is run. This field is used to record the date and time when the staff has communicated to the client about the issue reported by the client.</inlineHelpText>
        <label>Responded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__responseDateTime__c</fullName>
        <label>Response Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__shortDescription__c</fullName>
        <inlineHelpText>This field will contain value first 255 character value of description field.</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__state__c</fullName>
        <defaultValue>true</defaultValue>
        <label>State Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__timeSpent__c</fullName>
        <inlineHelpText>This field has been deprecated and is no longer used in Remedyforce Console.</inlineHelpText>
        <label>Time Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingReasons>
        <fullName>BMCServiceDesk__Incident_Clients_Share_for_SS__c</fullName>
        <label>Incident Clients Share for SS</label>
    </sharingReasons>
    <validationRules>
        <fullName>BMCServiceDesk__Cannot_Update_Closed_Incident</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISCHANGED(BMCServiceDesk__Is_New_Record__c)), NOT( BMCServiceDesk__state__c ) , NOT( PRIORVALUE( BMCServiceDesk__state__c ) ), NOT(ISNEW()) ,NOT( ISCHANGED( BMCServiceDesk__Total_Duration__c ) ), NOT( ISCHANGED( BMCServiceDesk__Feedback__c ) ), NOT( ISCHANGED( BMCServiceDesk__Compliments_and_Complaints__c ) ), NOT(ISCHANGED( BMCServiceDesk__Feedback_Last_Submitted__c)),NOT(ISCHANGED( BMCServiceDesk__FKBroadcast__c)),NOT(AND(ISCHANGED(BMCServiceDesk__dueDateTime__c),NOT(BMCServiceDesk__state__c), (LastModifiedDate  -  BMCServiceDesk__closeDateTime__c) &lt; 0.0003 , (LastModifiedDate  -  BMCServiceDesk__closeDateTime__c) &gt; -0.1 )))</errorConditionFormula>
        <errorMessage>This incident is closed. Reopen the incident to modify it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Check_OutageStartDate</fullName>
        <active>true</active>
        <description>Outage Start Date is required.</description>
        <errorConditionFormula>And(NOT(OR(ISNULL(BMCServiceDesk__outageTo__c),ISBLANK(BMCServiceDesk__outageTo__c))),OR(ISNULL(BMCServiceDesk__outageFrom__c),ISBLANK(BMCServiceDesk__outageFrom__c)))</errorConditionFormula>
        <errorMessage>Outage Start Date is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Check_OutageToDate</fullName>
        <active>true</active>
        <description>This rule is used to make sure that Outage End Date comes always after Outage Start Date.</description>
        <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__outageTo__c),ISBLANK(BMCServiceDesk__outageTo__c) ) ), BMCServiceDesk__outageTo__c &lt;= BMCServiceDesk__outageFrom__c )</errorConditionFormula>
        <errorMessage>Outage End Date must be later than Outage Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Follow_up_date_required</fullName>
        <active>true</active>
        <description>IF Follow_up is checked. Follow_up_Date is required</description>
        <errorConditionFormula>IF(BMCServiceDesk__followUp__c==TRUE,
OR( ISBLANK(BMCServiceDesk__followUpDateTime__c) , ISNULL(BMCServiceDesk__followUpDateTime__c)) 
,FALSE)</errorConditionFormula>
        <errorMessage>Please enter the Follow Up Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Not_allow_Request_Definition_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISBLANK( BMCServiceDesk__FKRequestDefinition__c )) ,      NOT(ISNULL(BMCServiceDesk__FKRequestDefinition__c )) , NOT(ISBLANK( PRIORVALUE(BMCServiceDesk__FKRequestDefinition__c) )),NOT(ISNULL(PRIORVALUE(BMCServiceDesk__FKRequestDefinition__c) )) ,(PRIORVALUE(BMCServiceDesk__FKRequestDefinition__c)  &lt;&gt; BMCServiceDesk__FKRequestDefinition__c))  ||  AND(NOT(ISBLANK( PRIORVALUE(BMCServiceDesk__FKRequestDefinition__c) )) ,      NOT(ISNULL(PRIORVALUE(BMCServiceDesk__FKRequestDefinition__c) )),NOT(ISBLANK( PRIORVALUE(BMCServiceDesk__FKRequestDetail__c) )) ,      NOT(ISNULL(PRIORVALUE(BMCServiceDesk__FKRequestDetail__c) )) ,OR(ISNULL(BMCServiceDesk__FKRequestDefinition__c ) , ISBLANK( BMCServiceDesk__FKRequestDefinition__c)) )</errorConditionFormula>
        <errorDisplayField>BMCServiceDesk__FKRequestDefinition__c</errorDisplayField>
        <errorMessage>You can not edit Request Definition.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Select_Category_or_template_or_req_def</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(BMCServiceDesk__contactType__c,&apos;&apos;),  ISBLANK( BMCServiceDesk__FKCategory__c ) , ISBLANK( BMCServiceDesk__FKRequestDefinition__c ) , ISBLANK( BMCServiceDesk__FKTemplate__c ) )</errorConditionFormula>
        <errorMessage>To save the incident, select a value in any one of the following fields: Category, Template, or Request Definition.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Select_Either_User_Lead_or_Contact</fullName>
        <active>false</active>
        <description>Allow to select Either User, Lead or Contact. And the Client type changes accordingly.</description>
        <errorConditionFormula>IF(((BMCServiceDesk__FKClient__c != NULL  &amp;&amp;  BMCServiceDesk__FKLead__c == NULL &amp;&amp; BMCServiceDesk__FKContact__c == NULL) ||
			(BMCServiceDesk__FKClient__c == NULL  &amp;&amp;  BMCServiceDesk__FKLead__c != NULL &amp;&amp; BMCServiceDesk__FKContact__c == NULL) ||
			(BMCServiceDesk__FKClient__c == NULL  &amp;&amp;  BMCServiceDesk__FKLead__c == NULL &amp;&amp; BMCServiceDesk__FKContact__c != NULL)) , 
			false, true)</errorConditionFormula>
        <errorMessage>To save the incident, select a value in any one of the following fields: Client ID, Contact or Lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__dueDateMustBeAfterOpenedDate</fullName>
        <active>true</active>
        <description>Due date must come after Opened Date</description>
        <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__dueDateTime__c),ISBLANK(BMCServiceDesk__dueDateTime__c) ) ),NOT(ISCHANGED( BMCServiceDesk__openDateTime__c ) ), BMCServiceDesk__dueDateTime__c &lt; BMCServiceDesk__openDateTime__c  )</errorConditionFormula>
        <errorMessage>The Due Date must be later than the Opened Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__followUpDateTimeValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__followUpDateTime__c),ISBLANK(BMCServiceDesk__followUpDateTime__c) ) ), BMCServiceDesk__followUpDateTime__c &lt; BMCServiceDesk__closeDateTime__c )</errorConditionFormula>
        <errorMessage>The Follow Up Date must be later than the Close Date. Select a new Follow Up Date.</errorMessage>
    </validationRules>
</CustomObject>